@@ -1,0 +1,21 @@
+/*
+** Copyright 2017 Double Precision, Inc.
+** See COPYING for distribution information.
+*/
+
+#include "libcxxw_config.h"
+#include "fonts/freetype.H"
+
+LIBCXXW_NAMESPACE_START
+
+const char *freetype_error(FT_Error err)
+{
+    #undef __FTERRORS_H__
+    #define FT_ERRORDEF( e, v, s )  case e: return s;
+    #define FT_ERROR_START_LIST     switch (err) {
+    #define FT_ERROR_END_LIST       }
+    #include FT_ERRORS_H
+    return "(Unknown error)";
+}
+
+LIBCXXW_NAMESPACE_END
